# IDSS

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/db/: connection.py  queries.py
backend/app/models/: jobs.py  requests.py  responses.py
backend/app/routers/: alerts.py  auth.py  forecasting.py  genomics.py  history.py  integrations.py  jobs.py  ml.py  phenotypics.py  reports.py
backend/app/services/: auth_service.py  google_service.py  job_manager.py  tool_runner.py
backend/app/workers/: celery_app.py
backend/tests/: conftest.py  test_auth.py  test_genomics.py  test_tool_runner.py
backend/tests/integration/: test_pipeline_e2e.py
backend/tests/integration/fixtures/: sample_a.fasta  sample_b.fasta  sample_c.fasta
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
tools/: _ml_features.py  alert_report.py  alert_score.py  amr_detection.py  db_init.py  db_query.py  db_store_run.py  drive_backup.py  example_tool.py  fetch_local_sequences.py  fetch_ncbi_sequences.py  forecast_trends.py  generate_genomics_report.py  generate_pipeline_docs.py  genotype_phenotype.py  ml_predict.py  ml_train.py  phenotypic_analysis.py  phylogenetics.py  qc_sequences.py  requirements.txt  sheets_dashboard.py  snp_detection.py  write_pptx.py  write_word_doc.py
workflows/: database_pipeline.md  example_workflow.md  genomics_pipeline.md  ml_training.md  (+3 more)
(+37 files in other folders)
